<resources>
    <string name="app_name">Get Schooled</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Create_Account">Create Account</string>
    <string name="Email">Email</string>
    <string name="Profile_Picture">Profile Picture</string>
    <string name="Set_Profile_Picture"> Set Profile Picture</string>
    <string name="Create">Create</string>
    <string name="Profile_Picture_Here">The user\'s profile picture will go here</string>
    <string name="Schools">Schools</string>
    <string name="No_Schools_Yet">There are currently no Schools to display.</string>
    <string name="School_Name">School Name</string>
    <string name="About">About</string>
    <string name="Enter">Enter!</string>
    <string name="About_Description">This app is designed to encourage young children to be creative
        by running their own school! They can create classes, teachers, and even students to form
        their own dream school.</string>
    <string name="Change_Password">Change Password</string>
    <string name="Change_Profile_Picture">Change Profile Picture</string>
    <string name="Delete_Account">Delete Account</string>
    <string name="Create_New_School">Create a School</string>
    <string name="Classes">Classes</string>
    <string name="Faculty">Faculty</string>
    <string name="Students">Students</string>
    <string name="Logout">Logout</string>
    <string name="Name_Your_School">Please Enter a Name for Your New School</string>
    <string name="Edit_Your_School_Name">Please Enter a New Name for Your School</string>
    <string name="Change_School_Name">Change School Name</string>
    <string name="Change_School_Picture">Change School Picture</string>
    <string name="Enter_Username">Please Enter Your Username</string>
    <string name="Enter_Old_Password">Please Enter Your Old Password</string>
    <string name="Enter_New_Password">Please Enter A New Password</string>
    <string name="Change_User_Profile_Image">Please Enter A Link to a New Profile Picture</string>
    <string name="Logout_Message">Are You Sure You Wish to Logout?</string>
    <string name="Enter_Email">Please Enter the Email Associated with the Account</string>
    <string name="Create_Principal">Please Enter a Name for the School\'s Principal</string>









</resources>
