<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.porterjc.getschooled.UserProfileActivity">

    <item
        android:id="@+id/createNewSchool"
        android:title="@string/Create_New_School"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/change_password"
        android:title="@string/Change_Password"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/change_profile_picture"
        android:title="@string/Change_Profile_Picture"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/deleteAccount"
        android:title="@string/Delete_Account"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/logout"
        android:title="@string/Logout"
        app:showAsAction="ifRoom" />
</menu>