<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/classesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/Classes"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/facultyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/Faculty"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/studentsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facultyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/Students"

        android:textColor="@color/textColor" />
</RelativeLayout>