<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Enter_Username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/changePasswordUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/Enter_Old_Password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/changePasswordOldPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:layout_marginTop="20dp"
        android:text="@string/Enter_New_Password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/changePasswordNewPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:textColor="@color/textColor" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/Change_Password"
        android:textColor="@color/textColor" />
</LinearLayout>